// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgA:0-800",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 1600,
    "key": "volvox:ctgA:800-1600",
    "offsetPx": 800,
    "refName": "ctgA",
    "start": 800,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 2 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 100,
    "key": "volvox:ctgA:0-100",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 100,
  },
  Object {
    "assembly": "volvox",
    "end": 200,
    "key": "volvox:ctgB:100-200",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 100,
    "widthPx": 100,
  },
]
`;

exports[`block calculation can calculate some blocks 5 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 5600,
    "key": "volvox:ctgA:4800-5600",
    "offsetPx": 4800,
    "refName": "ctgA",
    "start": 4800,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 6400,
    "key": "volvox:ctgA:5600-6400",
    "offsetPx": 5600,
    "refName": "ctgA",
    "start": 5600,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 6 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 200,
    "key": "volvox:ctgA:0-200",
    "offsetPx": 0,
    "refName": "ctgA",
    "start": 0,
    "widthPx": 200,
  },
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgB:0-800",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 0,
    "widthPx": 800,
  },
]
`;

exports[`block calculation can calculate some blocks 7 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 800,
    "key": "volvox:ctgB:0-800",
    "offsetPx": 200,
    "refName": "ctgB",
    "start": 0,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 1000,
    "key": "volvox:ctgB:800-1000",
    "offsetPx": 1000,
    "refName": "ctgB",
    "start": 800,
    "widthPx": 200,
  },
]
`;

exports[`block calculation can calculate some blocks 8 1`] = `
Array [
  Object {
    "assembly": "volvox",
    "end": 1600,
    "key": "volvox:ctgB:800-1600",
    "offsetPx": 1000,
    "refName": "ctgB",
    "start": 800,
    "widthPx": 800,
  },
  Object {
    "assembly": "volvox",
    "end": 2400,
    "key": "volvox:ctgB:1600-2400",
    "offsetPx": 1800,
    "refName": "ctgB",
    "start": 1600,
    "widthPx": 800,
  },
]
`;
